feat(taxi-dispatch-server): Refactored more code in DatabaseCommunication class